--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 ## has more thorough IDE-specific entries.
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/Dotnet.gitignore
+**/appsettings.json
 
 # Build results
 [Dd]ebug/
@@ -52,3 +53,6 @@ CodeCoverage/
 *.VisualState.xml
 TestResult.xml
 nunit-*.xml
+
+
+.idea/
